# TankSimulation

./: .env.example  .gitignore  README.md  ROS_파일들_실행_방법_web_live_async_업데이트.txt  env  tank_proxy.py
docs/: CONVENTIONS.md  EXPERIMENT_RESULTS_AND_PLAN.md  INTEGRATION_NOTES_VISUAL_PERCEPTION.md  README_REORGANIZED_STRUCTURE.md  RECON_TURRET_SWEEP_SPEC.md  REFACTOR_NOTES_LIDAR_CONFIG.md  RL_STEP0_RESET_TEST.md  ROS_파일들_실행_방법.txt  RUN.md  SCENARIO2_DESIGN.md  SIMULATOR_API.md  TECHNICAL_DEEP_DIVE.md  implementation_plan.md  최종실행 명령
logs/scenario1_terminator_20260701_122455/: bridge_health.json
recon_reports/: route_A.json  route_comparison.json  route_risk_result:gemma3:4b.json  route_risk_result:qwen3:0.6b.json
reports/session_20260611_092845/: summary.md
reports/session_20260611_093243/: summary.md
reports/session_20260611_094303/: summary.md
scripts/: analyze_logs.py  analyze_run.py  build_mission_plan.py  build_scenario2_map.py  compare_verdicts.py  generate_recon_report.py  generate_route_summary_txt.py  log_loop_rate.py  make_llm_input.py  merge_recon_terrain_map.py  run_bridge.sh  run_recon.sh  run_recon_scenario.py  run_rviz.sh  run_scenario1_auto_terminator.sh  run_scenario2_auto_terminator.sh  run_scenario2_scenario.py  run_stack.sh  run_turret_experiment.py  tank_proxy.py  terrain_map_postprocess.py  verify_route_plan.py  visualize_routes.py
scripts/.terminator_runtime/: common_env.sh  s1_bridge_pane.sh  s1_debug_pane.sh  s1_manager_pane.sh  s1_rviz_pane.sh  s2_bridge_pane.sh  s2_debug_pane.sh  s2_manager_pane.sh  s2_rviz_pane.sh  scenario1_auto_terminator_config  scenario1_bridge.sh  scenario1_debug.sh  scenario1_manager.sh  scenario1_terminator_config  scenario1_viz.sh  scenario2_auto_terminator_config
scripts/recon_eval/: threat_geometry.py
src/TEAM_TANKSIMULATION_DOCS/: ai__docs__driving_dev_plan.md
src/control/: package.xml  setup.py
src/control/config/: scenario2_routes.yaml  tank_parameters.yaml
src/control/control/: ballistic_turret_node.py  config.py  tank_controller_node.py  trajectory_metrics.py
src/control/launch/: tank_autonomous_control.launch.py  tank_scenario2.launch.py
src/ground_division/: package.xml  setup.cfg  setup.py
src/ground_division/ground_division/: __init__.py  terrain_record_finalize_node.py  terrain_utils.py
src/ground_division/launch/: terrain_record_finalize.launch.py
src/lidar/: package.xml  setup.py
src/lidar/lidar/: config.py  coordinate_utils.py  lidar_processor_node.py  (+6 more)
src/mission/: package.xml  setup.py
src/mission/mission/: decision_node.py  engage_contract.py  mock_turret_node.py  risk.py  sudden_advisor_node.py  sudden_decision.py
src/path_planning/: package.xml  setup.py
src/phone_sim2real/: README_PHONE_SIM2REAL.md  package.xml  setup.cfg  setup.py
src/potential/: README_LECTURE_APF_UPDATE.md  package.xml  setup.cfg  setup.py
src/potential/config/: apf_weight_profiles.yaml
src/potential/potential/: config.py  potential_field_node.py
src/risk_analysis/: package.xml  setup.cfg  setup.py
src/ros_bridge/: README.md  package.xml  run_ros_bridge.py  setup.cfg  setup.py
src/rviz_visualization/: README.md  package.xml  setup.cfg  setup.py
src/rviz_visualization/config/: static_map_costs.yaml
src/rviz_visualization/launch/: tank_recon_apply_terrain.launch.py  tank_recon_collect_terrain.launch.py  tank_recon_map_rviz.launch.py  tank_recon_mission_map_rviz.launch.py  tank_record_finalize_terrain_rviz.launch.py  tank_rviz.launch.py  tank_scenario2_map_view.launch.py
src/rviz_visualization/map/: final_v3.map  final_v4.map  finalmap.map
src/rviz_visualization/resource/: rviz_visualization
src/rviz_visualization/rviz/: tank_debug.rviz  tank_finalmap.rviz  tank_recon_map.rviz  tank_recon_mission_map.rviz
src/rviz_visualization/rviz_visualization/: config.py  marker_utils.py  rviz_visualizer_node.py  static_map_loader_node.py  terrain_record_finalize_node.py
src/rviz_web/: README.md  package.xml  setup.cfg  setup.py
src/rviz_web/config/: topics.yaml
src/rviz_web/launch/: rviz_web.launch.py  rviz_web_scenario2_map_view.launch.py
src/rviz_web/resource/: rviz_web
src/rviz_web/rviz_web/: web_server_node.py
src/tank_common/: package.xml  setup.cfg  setup.py
src/tank_common/tank_common/: pointcloud.py  vehicle_model.py
src/tank_visual_perception/: package.xml  setup.cfg  setup.py
src/tank_visual_perception/launch/: visual_perception.launch.py
src/tank_visual_perception/resource/: tank_visual_perception
src/tank_visual_perception/tank_visual_perception/: lidar_camera_overlay_node.py  lidar_dbscan_cluster_node.py  projection.py
src/vision/: package.xml  run_yolo_server.py  setup.py
src/vision/config/: yolo_detection.yaml
src/vision/models/: export_best_final_416_engine.py
src/vision/vision/: __init__.py  config.py  team_yolo_handler.py  yolo_debug_server.py  yolo_detector.py
tank_discovered_maps/: discovered_objects_20260626_154414.map  discovered_objects_20260626_154602.map  discovered_objects_20260626_155217.map  discovered_objects_20260626_162345.map  discovered_objects_20260626_170914.map  discovered_objects_20260626_171127.map  discovered_objects_20260626_172623.map  discovered_objects_20260626_172816.map  discovered_objects_20260626_173214.map  discovered_objects_20260626_173424.map  discovered_objects_20260626_181228.map  discovered_objects_20260626_181433.map  discovered_objects_20260629_151304.map  discovered_objects_20260629_151456.map  discovered_objects_20260629_151820.map  discovered_objects_20260629_152007.map  discovered_objects_20260630_093520.map  discovered_objects_20260630_093904.map  discovered_objects_20260630_095707.map  discovered_objects_20260630_100143.map  discovered_objects_20260630_103529.map  discovered_objects_20260630_103932.map  discovered_objects_20260630_105300.map  discovered_objects_20260630_110003.map
tank_logs/session_20260611_092845/: obstacles.jsonl
tank_logs/session_20260611_093243/: collision.jsonl  obstacles.jsonl
tank_logs/session_20260611_094303/: obstacles.jsonl
tank_terrain_maps/: terrain_map_latest.npz
(+48 files in other folders)
