<?xml version="1.0" ?>
<package format="3">
  <name>potential</name>
  <version>0.0.1</version>
  <description>Potential field vector node for Tank Challenge ROS2 bridge.</description>
  <maintainer email="pnuav@example.com">pnuav</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>tank_common</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>lidar</exec_depend>
  <exec_depend>rviz_visualization</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>sensor_msgs_py</exec_depend>
  <exec_depend>path_planning</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
