<?xml version="1.0"?>
<package format="3">
  <name>rviz_web</name>
  <version>0.0.1</version>
  <description>Standalone web RViz-like 3D viewer for Tank Challenge ROS2 topics.</description>
  <maintainer email="tankcc@example.com">tankcc</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>python3-flask</exec_depend>
  <exec_depend>rosbridge_server</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
