<?xml version="1.0" ?>
<package format="3">
  <name>tank_visual_perception</name>
  <version>0.1.0</version>
  <description>Team visual perception utilities for LiDAR-camera projection overlay and LiDAR DBSCAN clustering.</description>
  <maintainer email="pnuav@example.com">pnuav</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>tank_common</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
